# agentflow

./: .env.example  .gitignore  CLAUDE.md  README.md  multi-agent-system-design.md  pyproject.toml
docs/: context-optimization-plan.md  design.md  fix-plan.md  openapi.json  session-log.md
docs/adr/: 001-redis-state-backend.md  README.md
docs/kb/: architecture.md  codebase-map.md  concepts.md  conventions.md  how-to.md  index.md
docs/presentations/: agentflow_gap_analysis.md  agentflow_presentation.html  agentflow_presentation_notes_concise.md
manifests/: business_analyst_agent.yaml  code_agent.json  code_agent.yaml  data_agent.json  data_agent.yaml  financial_analyst_agent.json  financial_analyst_agent.yaml  frontend_agent.json  frontend_agent.yaml  knowledgebase_agent.yaml  planner_agent.json  planner_agent.yaml  research_agent.json  research_agent.yaml  task_decomposer_agent.json  task_decomposer_agent.yaml  writer_agent.json  writer_agent.yaml
sandbox/: requirements.txt
skills/business-analysis/: SKILL.md  competitive_analysis.md  future_outlook.md  sustainability_framework.md
skills/equity-research/: SKILL.md  sources_guide.md
skills/financial-analysis/: SKILL.md  dcf_model.md  ratio_cheatsheet.md
skills/frontend-web/: SKILL.md  build_and_bundling.md  (+4 more)
test-runs/: stream-stock-forecast-model.txt
tests/: test_agent.py  test_arxiv_search.py  test_decomposer.py  test_models.py  test_registry.py  test_scheduler.py  test_skill_loader.py  test_stream.py  test_tools.py
tests-smoke/: tests.http
workspace/: mcp_research_output.json  server.py
(+57 files in other folders)
