[project]
name = "agentflow"
version = "0.1.0"
description = "Multi-agent orchestration system powered by Claude"
readme = "README.md"
authors = [
    { name = "Alexei Pogrebtsov", email = "alex.pogrebtsov@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.101.0",
    "fastapi>=0.136.1",
    "mcp>=1.27.1",
    "networkx>=3.6.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "sse-starlette>=3.4.4",
    "uvicorn>=0.46.0",
]

[project.scripts]
agentflow = "agentflow.main:app"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
